src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

/* start page */
.startTitle {
  padding-top: 1em;
  font-size: 24;
  text-align: center;
  font-weight: bold; 
}

.nav {
  padding-top: 10em;
}

.navButtons {
  height: 50;
  width: 20em;
  margin-left: auto;
  margin-right: auto;
  margin-top: 1em;
  border-radius: 0.5em;
  background-color: blue;
}

.navLink {
  text-decoration: none;
}

.navButtons:hover {
  opacity: 99%;
}

.buttonText {
  text-align: center;
  color: #fff;
  font-weight: bold;
  font-size: 18;
}

/* Tabs */
.tabs {
  position: relative;
  background: lightgray;
  z-index: 10;
}

.tabs .container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 1rem;
  align-items: center;
  justify-content: center;
  text-align: center;
}
.tabs p {
  font-size: 1rem;
}
.tabs .container > div{
  /* padding: 0.3rem 0; */
}
.tabs .container > div:hover{
  color: white;
  cursor: pointer;
}
.tab-border{
  border-bottom: red 4px solid;
}
/* Tab Content */
.tab-content {
  padding: 2rem 0;
  background: white;
  color :#000;
}
#tab-1-content,
#tab-2-content,
#tab-3-content{
  display: none;
}
.show {
  display: block !important;
}

.hide{
  display: none;
}

/*------------ Canvas -----------*/
#Tab1 canvas{
  position: relative;
  display:block;
  background: white;
  height: 30vw; 
  width: 70vw;
  margin:auto; 
}

#Tab2 canvas{
  position: relative;
  background: white;
  display: block;
  height: 30vw; 
  width: 60vw;
  margin:auto; 
}

/* ----------Forms------------ */
.formContainer {
  text-align: center;
}

.form {
  display: flex;
  justify-content: left;
  align-items: center;
  margin-left: calc(50% - 7em);
}

.input {
  /* justify-content: left; */
  padding: 0.65rem 0.5rem;
  font-size: medium;
  border: 10px solid var(black);
  background-color: #e4e2e2;
  border-radius: 10px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin-top: 0.3em;
}

.categoryHeader {
  margin-top: 1em;
  font-size: large;
}

.error {
  color: red;
  font-size: small;
  margin-top: 1em;
  margin-left: 1em;
}

.units {
  margin-top: 1em;
  margin-left: 0em;
}

.applyButton {
  border-radius: 1em;
  background-color: blue;
  text-decoration-color: white;
  margin-top: 1.5em;
  height: 3em;
  width: 15em;
  border: blue;
}

.applyButton:hover {
  opacity: 99%;
}

/* ----------Next button------------ */
/* .next:before{
  margin-left: 20vw;
} */
.next {
  background-color: #04AA6D;
  color: white;
  border-radius: 1em;  
  padding: 0.5em;
  padding-left: 1em;
  padding-right: 1em;
  text-decoration: none;
  display: inline-block;
  margin-left: 70vw;
  font-size: small;
}
.next:hover {
  background-color: #ddd;
  color: black;
}

.previous {
  background-color: #f1f1f1;
  color: black;
  border-radius: 1em;  
  padding: 0.5em;
  padding-left: 1em;
  padding-right: 1em;
  text-decoration: none;
  display: inline-block;
  margin-right: 70vw;
  font-size: small;
}

/* ----------Pop up------------ */
.popup-text{
  text-align: center;
}

/* -----------Results page--------------- */
.input-Container{
  width:70vw;
  margin-left: auto;
  margin-right: auto;
  text-align: center; 
  font-size: 0;
  display: flex;
  flex-direction: column;
}
.input-Container h2{
  font-size: 15px;
  margin-top: 5px;
  margin-bottom: 5px;
  text-decoration: underline;
}
.input-Container div{
  font-size: 12px;
  margin-top: -10px;
  margin-bottom: -10px;
}
.input-Container p{
  display:inline-block;
}
.input-Container h5{
  display:inline-block;
}
.calculate {
  border-radius: 1em;
  background-color: blue;
  margin-top: 1.5em;
  height: 3em;
  width: 15em;
  color: white;
  border: blue;
  margin-left: auto;
  margin-right: auto;
}
.calculate:hover {
  opacity: 99%;
}

